tests/PathTests/data/InvalidFilterContextRefTest.xpl
integer[] f() {1; 2; 3;}

string[] main() {
  f()[. % 2];
}
